// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessCardDetail Component handles empty tags gracefully 1`] = `
<DocumentFragment>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiBox-root MuiCollapse-hidden css-9qxzol-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        No details yet...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BusinessCardDetail Component renders in default collapsed state 1`] = `
<DocumentFragment>
  <div
    class="MuiCollapse-root MuiCollapse-vertical MuiBox-root MuiCollapse-hidden css-9qxzol-MuiCollapse-root"
    style="min-height: 0px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Tags: coffee, test
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
